@@ -1,3 +1,10 @@
+2004-12-16  Michael Koch  <konqueror@gmx.de>
+
+	* libraries/javalib/javax/swing/text/JTextComponent.java
+	(focusAccelerator): New variable.
+	(getFocusAccelerator): New method.
+	(setFocusAccelerator): Likewise.
+
 2004-12-16  Adam Heath  <doogieg@brainfood.com>
 
 	* config/alpha/alpha.c, config/mips/common.h, config/mips/mips.c
